{{ $NEXT }}

0.16      2011-03-12 13:12

    - bumped dependency from Joose
    - do not catch "usual" the exceptions if Joose.C.debug is enabled
    - removed `CONT` attribute from ControlFlow

0.15      2011-01-12 18:53

    - implemented `delay` method
    - implemented `andMax` and `andNoEx` methods
    - THROW now should throw only single value

0.14      2010-12-14 21:13

    - docs update
    - bumped deps
    - throw Errors instead of strings

0.13      2010-11-01 13:38

    - re-release solely for `npm` platform, no functional changes

0.12      2010-10-05 12:46

    - re-release with fixes in package.json, no functional changes

0.11      2010-09-07 15:29

    
    - really fixed bug, when leaving sequential flow with CONTINUE from other scope, could cause exception

0.10      2010-09-07 15:15

    - fixed bug, when throwing exceptions from the AND statements synchronously,
      caused incorrect exception propagation
      
    - fixed bug, when leaving sequential flow with CONTINUE from other scope, could cause exception

0.09      2010-08-08 12:14
    
    - fixed bug, when nested `NEXT` statement could skip the outer `THEN`
     

0.08      2010-08-02 11:00

    - added 'andThen' method, a shortcut for `.then().now()`
    
    - the synchronization point of AND will receive several arguments instead of a array

0.07      2010-07-05 19:18

    - test suite now passes on the NodeJS platform

0.06      2010-06-25 09:42

    - somehow the 0.05 release didn't appear on JSAN, re-releasing

0.05      2010-06-24 13:30

    - fixed bug, when the already leaved continuation instance could be
      picked up during implicit methods chaining

0.04      2010-06-23 14:12

    - re-released with correct requirements format in META.json, no other changes

0.03      2010-06-14 19:57

    - switched to Dist::Zilla for distribution management

0.02   .........

    [ENHANCEMENTS]
    
     
    
    [API CHANGES]

    -none-
    

    [BUG FIXES]
    