@@ -98,7 +98,7 @@ Class('JooseX.CPS.Continuation', {
                     nextFunc        : reEntryFunc
                 })
                 
-                this.run(statement.func, statement.scope, statement.args || arguments, child)
+                this.launch(statement.func, statement.scope, statement.args || arguments, child)
                 
             } else {
                 delete this.reEntryFunc
@@ -143,11 +143,16 @@ Class('JooseX.CPS.Continuation', {
                     
                     results[ index ] = arguments
                     
+                    // "manually" mark the current continuation "leaved" to prevent it from capturing the exception which propagates
+                    this.CONT.leaved = true
+                    
                     cont()
                     
                 }).CATCH(function (e) {
                     
                     (noExFromAnd ? results : exceptions)[ index ] = e
+                    
+                    this.CONT.leaved = true
                     
                     cont()
                     
@@ -159,7 +164,7 @@ Class('JooseX.CPS.Continuation', {
         
         
         
-        run : function (func, scope, args, statement) {
+        launch : function (func, scope, args, statement) {
             var glob                = Joose.top
             var prevScopeStatement  = scope.CONT
             var prevGlobStatement   = glob.__GLOBAL_CNT__
@@ -210,7 +215,7 @@ Class('JooseX.CPS.Continuation', {
                     }
                 })
                 
-                this.run(finallyFunc, finallyScope, [], finallyStatement)
+                this.launch(finallyFunc, finallyScope, [], finallyStatement)
                 
                 return
             }
@@ -249,7 +254,7 @@ Class('JooseX.CPS.Continuation', {
                     keepNextFunc    : true
                 })
                 
-                this.run(catchFunc, catchScope, args, catchStatement)
+                this.launch(catchFunc, catchScope, args, catchStatement)
 
                 return
             } 
@@ -412,6 +417,11 @@ Class('JooseX.CPS.Continuation', {
         },
         
         
+        RUN : function () {
+            return this.NOW.apply(this, arguments)
+        },
+        
+        
         getNearestNotEntered : function () {
             if (this.entered) return null
             
@@ -486,7 +496,12 @@ Class('JooseX.CPS.Continuation', {
         
         
         andThen : function () {
-            return this.andTHEN.apply(this, arguments)
+            return this.THEN.apply(this, arguments).now()
+        },
+        
+        
+        thenRun : function () {
+            return this.THEN.apply(this, arguments).now()
         },
         
         
@@ -496,6 +511,11 @@ Class('JooseX.CPS.Continuation', {
         
         
         now : function () {
+            return this.NOW.apply(this, arguments)
+        },
+        
+        
+        run : function () {
             return this.NOW.apply(this, arguments)
         },
 
