@@ -45,6 +45,11 @@ Role('JooseX.CPS.ControlFlow', {
         andTHEN : function (func, scope, args) {
             return this.__getCONT__().andTHEN(func, scope || this, args)
         },
+
+        
+        thenRUN : function (func, scope, args) {
+            return this.__getCONT__().andTHEN(func, scope || this, args)
+        },
         
         
         NEXT : function (func, scope, args) {
@@ -53,6 +58,13 @@ Role('JooseX.CPS.ControlFlow', {
         
         
         NOW : function () {
+            var cont = this.CONT
+            
+            return cont.NOW.apply(cont, arguments)
+        },
+        
+        
+        RUN : function () {
             var cont = this.CONT
             
             return cont.NOW.apply(cont, arguments)
